--- a/arches/install/requirements.txt
+++ b/arches/install/requirements.txt
@@ -5,7 +5,7 @@ Pillow==2.4.0
 rdflib
 unicodecsv
 pyyaml
-pyshp
+pyshp>=2.0.1
 
 # Leave the following line commented so that pip install will ignore this
 # The installer uses the following line to download the proper version of ES
