--- a/arches/install/requirements.txt
+++ b/arches/install/requirements.txt
@@ -26,6 +26,7 @@ urllib3>=1.23
 validators==0.10.3
 wsgiref==0.1.2
 xlrd==0.9.0
+numpy==1.15.0
 
 # Leave the following line commented so that pip install will ignore this
 # The installer uses the following line to download the proper version of ES
